# pdet

./: README.md  pyproject.toml  requirements.txt
pdet/: emulator.py
src/pdet/: O3.py  __init__.py  _cosmology.py  _emulator.py  _names.py  _transform.py
