[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages]
find = { where = ["src/"] }

[tool.setuptools.package-data]
trained_weights = ["*.json", "*.hdf5"]

[project]
authors = [{ name = "Tom Callister", email = "thomas.a.callister@gmail.com" }]
name = "pdet"
version = "0.0.1"
maintainers = [
    { name = "Tom Callister", email = "thomas.a.callister@gmail.com" },
]
description = ""
readme = "README.md"
# license = { file = "LICENSE" }
requires-python = ">=3.10"
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "jax>=0.4.25",
    "jaxlib>=0.4.25",
    "jaxtyping>=0.2.28",
    "equinox>=0.11.3",
    "h5py>=3.10.0",
    "numpy>=1.26.4",
    "pandas>=2.2.1",
    "astropy>=6.0.1",
]
# keywords = []

[project.optional-dependencies]
dev = [
    "pre-commit==3.8.0",
    "pytest==8.3.2",
    "ruff==0.5.7",
    "setuptools==72.1.0",
]

[project.urls]
Changelog = "https://github.com/tcallister/pdet/blob/main/CHANGELOG.md"
Discussion = "https://github.com/tcallister/pdet/discussions"
Homepage = "https://github.com/tcallister/pdet"
Issues = "https://github.com/tcallister/pdet/issues"

[tool.pytest.ini_options]
addopts = ["-v", "--color=yes"]
filterwarnings = [
    "error",
    "ignore:numpy.ufunc size changed,:RuntimeWarning",
    "ignore:Using a non-tuple sequence:FutureWarning",
    "ignore:jax.tree_structure is deprecated:FutureWarning",
    "ignore:numpy.linalg support is experimental:UserWarning",
    "ignore:scipy.linalg support is experimental:UserWarning",
    "once:No GPU:UserWarning",
    "once::DeprecationWarning",
]
doctest_optionflags = [
    "ELLIPSIS",
    "NORMALIZE_WHITESPACE",
    "IGNORE_EXCEPTION_DETAIL",
]
